# little_language

./: .gitignore  CMakeLists.txt  executable  grammar  grammar.txt  lexer.cpp  lexer.h  little_compiler.sh  parser.cpp  parser_template.cpp  syntax_typing.txt  test.lln
ast/: AddSubOpAST.h  ArrayAST.h  BinaryExpAST.h  CharAST.h  DoWhileAST.h  FileAST.h  FloatAST.h  ForAST.h  ForInAST.h  ForRangeAST.h  FunctionAST.h  FunctionCallAST.h  FunctionPrototypeAST.h  FunctionPrototypeArgumentAST.h  FunctionPrototypeArgumentCharAST.h  FunctionPrototypeArgumentFloatAST.h  FunctionPrototypeArgumentIntAST.h  FunctionPrototypeArgumentStringAST.h  GenericAST.h  IfAST.h  ImportAST.h  IntAST.h  MulDivOpAST.h  ReturnAST.h  StringAST.h  StructAST.h  VariableAST.h  VariableAssignAST.h  VariableDeclarationAST.h  WhileAST.h
code_examples/: array_test.lln  do_while_test.lln  factorial_test.lln  for_in_test.lln  for_range_test.lln  function_test.lln  if_test.lln  input_output_test.lln  mathematical_operation_test.lln  while_test.lln
headers/: LogErrorValue.h  VariableTable.h  lexer_parser_commons.h  llvm_commons.h  parser_headers.h  shared_memory.h  utils.h
include/: ArrayAST.h  ArrayAccessAST.h  BinaryExprAST.h  CharAST.h  ControlFlotAST.h  ErrorPrototype.h  ErrorValue.h  FloatAST.h  FlowControlAST.h  FunctionAST.h  GenericAST.h  IOFunctionality.h  ImportAST.h  IntAST.h  LLVMState.h  Lexer.h  Parser.h  ReturnAST.h  StringAST.h  Token.h  Utils.h  VariableAST.h  VariableTable.h
src/: #include "VariableAST.cpp  BasicDataTypes.cpp  BinaryExprAST.cpp  DoWhileAST.cpp  ErrorPrototype.cpp  (+14 more)
